--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "jsconfig.json": "^2.0.0",
+    "reset-css": "^5.0.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
