--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "jsconfig.json": "^2.0.0",
     "reset-css": "^5.0.1",
     "vue": "^2.6.11"
